style.css
@import url("https://use.typekit.net/uix0fgg.css");

html {
	font-size: 70%;
}

body {
	font-family: calluna-sans, sans-serif;
}

.book.font-family-0 {
	font-family: calluna, serif;
	font-variant-ligatures: common-ligatures;
  	-moz-font-feature-settings: "liga", "clig";
  	-webkit-font-feature-settings: "liga", "clig";
  	font-feature-settings: "liga", "clig";
}

.book.font-family-1 {
	font-family: calluna-sans, sans-serif;
	font-variant-ligatures: common-ligatures;
  	-moz-font-feature-settings: "liga", "clig";
  	-webkit-font-feature-settings: "liga", "clig";
  	font-feature-settings: "liga", "clig";
}

/*set normal color theme text and bg colors here*/
.book .book-body {
	
}

/*if you change normal color theme colors above, then set alternate themes below*/

/*SEPIA*/
.book.color-theme-1 .book-body {
	/*background:*/
	/*color:*/
}

/*NIGHT*/
.book.color-theme-2 .book-body {
	/*background:*/
	/*color:*/
}

.book.color-theme-2 .book-body .page-wrapper .page-inner section.normal h1 {
	border-color: #0B494A;
}

.book.color-theme-2 .book-summary ul.summary li.active > a, .book.color-theme-2 .book-summary ul.summary li a:hover {
	background-color: #0b494a;
}

.book .book-header h1 {
	font-family: calluna-sans, sans-serif;
	font-weight: 300;
	font-style: normal;
}

.book .book-header, .book .book-summary {
	font-family: calluna-sans, sans-serif;
}

.book .book-summary {
	font-size: 16px;
	line-height: 1em;
}


.book .book-summary ul.summary li.chapter ul li.chapter ul li.chapter {
	font-style: italic;
}

.book .book-body .page-wrapper .page-inner section.normal p {
  margin-top: 0em;
  margin-bottom: 0em;
}

p + p, h3 + p {
  text-indent: 1.2em;
}

li.chapter b {
	font-style: normal;
}

.book .book-summary ul.summary li a:hover, .book .book-summary ul.summary li.active>a {
	color: #1aa9ab;
	/*font-weight: 600;*/
}

.book .book-body .page-wrapper .page-inner section.normal a {
	color: #1aa9ab;
}

/*
h1 + p::first-line {
  /* all small caps workaround
  text-transform: lowercase;
  font-variant: small-caps;
  * actual opentype all small caps code:
  font-variant-caps: all-small-caps;
  -moz-font-feature-settings: "smcp";
  -webkit-font-feature-settings: "smcp";
  font-feature-settings: "smcp";
  letter-spacing:.1em;
}
*/

p.caption {
  color: #777;
  margin-top: 10px;
}
p code {
  white-space: inherit;
}
pre {
  word-break: normal;
  word-wrap: normal;
}
pre code {
  white-space: inherit;
}

h1 {
  text-wrap: balanced;
  border-bottom: 2px solid #1aa9ab;
  line-height: 1em;
  padding-bottom: .5em;
  font-weight: 400;
  /*all small caps*/
  text-transform: lowercase;
  font-variant: small-caps;
  /*opentype asc*/
  /*font-variant-caps: all-small-caps;
  -moz-font-feature-settings: "smcp";
  -webkit-font-feature-settings: "smcp";
  font-feature-settings: "smcp";*/
  letter-spacing:.1em;
}

h1 > .header-section-number {
  display: block;
  font-size: .67em;
  padding-right: 0em;
}

h2 {
  font-weight: 700;
}

.book .book-body .page-wrapper .page-inner section.normal h2 {
	font-size: 1em;
}

h2 > .header-section-number {
	display: block;
	padding-right: 0em;
	font-weight: normal;
	/*all small caps*/
  	text-transform: lowercase;
  	font-variant: small-caps;
  	/*opentype asc*/
    /*font-variant-caps: all-small-caps;
    -moz-font-feature-settings: "smcp";
    -webkit-font-feature-settings: "smcp";
    font-feature-settings: "smcp";*/
  	letter-spacing:.1em;
}

h2 > .header-section-number::before {
	content: "Section ";
}

h3 {
  font-style: italic;
}

.book .book-body .page-wrapper .page-inner section.normal h3 {
	font-size: 1em;
}

.book .book-body .page-wrapper .page-inner section.normal h3 {
	margin-bottom: 0;
}

h3 > .header-section-number {
  font-style: normal;
  font-weight: 600;
}

/* Rule separating subheads; issue: also puts rule directly between h2 and h3—could probably be solved by proper use of descendant selectors...
.book .book-body .page-wrapper .page-inner section.normal h3::before {
  content: "—";
    color: #3f5061;
    font-weight: 900;
    display: block;
    text-align: center;
    transform: scale(4,1);
    margin-bottom:1em;
}
*/

 /* Restart footnote numbers for each section. Following trail of solution to request asked here: https://community.rstudio.com/t/restart-footnote-numbering-in-each-chaptering/75628/4
*/

  /* don't show the wrong footnote calls */
  .footnote-ref sup,
  .footnoteRef sup {
    display: none;
  }

  /* use a counter for footnote calls */
  .page-inner {
    counter-reset: fn-call;
  }

  .footnote-ref,
  .footnoteRef {
    counter-increment: fn-call;
  }

  /* generate new footnote calls */
  .footnote-ref::after,
  .footnoteRef::after {
    content: counter(fn-call);
    position: relative;
    top: -.5em;
    font-size: 85%;
    line-height: 0;
    vertical-align: baseline;
  }

  /* use a counter for footnotes numbering */
  .footnotes ol {
    list-style: none;
    counter-reset: fn-number;
  }

  .footnotes li {
    counter-increment: fn-number;
  }

  .footnotes p::before {
    content: counter(fn-number) '. ';
  }
  
/* end Restart footnote numbers for each section. */

